moved tilda js to bottom

--- a/src/blocks/b-language-tabs/b-language-tabs.less
+++ b/src/blocks/b-language-tabs/b-language-tabs.less
@@ -45,6 +45,7 @@
 	padding: 8px 0;
 	display: block;
 	position: relative;
+	transition: all .2s ease;
 
 	&:hover, &:active, &:focus {
 		color: @block-link-hover-color;
