--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -127,10 +127,17 @@
 
 .b-portfolio-item__text {
 	margin-top: 100px;
-	margin-bottom: 70px;
+	margin-bottom: 140px;
+
+	font-size: 28px;
+	line-height: 1.25;
 
 	@media (min-width: @screen-md-min) {
-		font-size: 18px;
+		font-size: 32px;
+	}
+
+	@media (min-width: @screen-xl-min) {
+		font-size: 36px;
 	}
 }
 
