--- a/src/blocks/b-review/b-review.less
+++ b/src/blocks/b-review/b-review.less
@@ -69,6 +69,11 @@
 		letter-spacing: .1em;
 		font-size: 12px;
 	}
+
+	@media (min-width: @screen-sm-min) {
+		letter-spacing: .12em;
+		font-size: 16px;
+	}
 }
 
 .b-review__date {
@@ -82,6 +87,11 @@
 	@media (min-width: @screen-xs-min) {
 		letter-spacing: .1em;
 		font-size: 12px;
+	}
+
+	@media (min-width: @screen-sm-min) {
+		letter-spacing: .12em;
+		font-size: 16px;
 	}
 }
 
