--- a/src/less/bootstrap/variables.less
+++ b/src/less/bootstrap/variables.less
@@ -53,7 +53,7 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-primary:     "TTNorms", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-primary:     'IBM Plex Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
