fixed headings font-size.

--- a/src/templates/portfolio_type_5.jade
+++ b/src/templates/portfolio_type_5.jade
@@ -29,7 +29,7 @@ block content
 
         .b-portfolio
             .container
-                h5.b-portfolio__header Мультяшные баннеры
+                h5.b-portfolio__header Баннеры в мультяшном стиле: вектор, flat, иллюстрации
 
             .b-portfolio__list
                 - for (var i=0; i<12;++i)
