--- a/src/templates/portfolio_type_5.jade
+++ b/src/templates/portfolio_type_5.jade
@@ -42,6 +42,7 @@ block content
                         p.b-portfolio__date 10.02.2010
                     a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                         img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
+                        //video.b-portfolio__video(autoplay, loop, muted, src="assets/img/video_preview.mp4")
                         .b-portfolio__content
                             p.b-portfolio__title Длинное название фирмы
                             p.b-portfolio__category Строительство
@@ -49,7 +50,8 @@ block content
                         p.b-portfolio__date 10.02.2010
                     a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                         img.b-portfolio__image(src='assets/img/tmp/portfolio3.png')
-                        video.b-portfolio__video(autoplay, loop, muted, src="assets/img/video_preview.mp4")
+                        span.js-portfolio-video(data-src="assets/img/video_preview.mp4")
+                        //video.b-portfolio__video(autoplay, loop, muted, src="assets/img/video_preview.mp4")
                         .b-portfolio__content
                             p.b-portfolio__title QIVI
                             p.b-portfolio__category Динное название категории
