fixed video loop. fixed portfolio list video instantiate.

--- a/src/templates/portfolio_type_1.jade
+++ b/src/templates/portfolio_type_1.jade
@@ -39,6 +39,7 @@ block content
                 - for (var i=0; i<13;++i)
                     a.b-portfolio__item(href='portfolio_item_1_ajax.html', rel='portfolio', data-effect="relax", data-origin="bottom", data-expose="true")
                         img.b-portfolio__image(src='assets/img/tmp/portfolio1.png')
+                        span.js-portfolio-video(data-src="https://tolkunov.com/uploads/portfolio/f5f0809df0597441ce2763309b4eb66e.mp4")
                         .b-portfolio__content
                             p.b-portfolio__title Самоедлинноеназваниефирмы
                             p.b-portfolio__category Строительство
