--- a/src/blocks/g-loader/g-loader.less
+++ b/src/blocks/g-loader/g-loader.less
@@ -37,6 +37,7 @@
 		height: 200px;
 		background: linear-gradient(to top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, .6) 60%, rgba(255, 255, 255, 0) 100%);
 		content: '';
+		pointer-events: none;
 	}
 }
 
