added portfolio video play button. other latest changes.

--- a/src/less/common.less
+++ b/src/less/common.less
@@ -403,3 +403,11 @@ html.smil #fancybox-loading div {
 .scrollbar-light > .scroll-element {
 	background: @body-muted-bg;
 }
+
+.tab-content__responsive {
+	& > .tab-pane {
+		@media (min-width: @screen-lg-min) {
+			display: block;
+		}
+	}
+}
