--- a/src/blocks/b-portfolio-video/b-portfolio-video.less
+++ b/src/blocks/b-portfolio-video/b-portfolio-video.less
@@ -3,7 +3,8 @@
 
 .b-portfolio-video {
 	position: relative;
-	display: inline-block;
+	display: block;
+	margin: 0 auto;
 }
 
 .b-portfolio-video__play {
@@ -21,13 +22,13 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 42px;
-	height: 42px;
+	width: 42px * 2;
+	height: 42px * 2;
 
 	border-radius: 50%;
 	transition: all .05s ease-out;
 
-	background: #e74c3c center center no-repeat url("../../assets/img/play.svg");
-	background-size: 13px 15px;
-	box-shadow: 0 8px 48px rgba(231, 76, 60, .8);
+	background: #2856f6 center left 31px no-repeat url("../../assets/img/play.svg");
+	background-size: 26px 30px;
+	box-shadow: 0 10px 30px rgba(40, 86, 246, .4);
 }
