latest update with portfolio carousel.

--- a/src/less/common.less
+++ b/src/less/common.less
@@ -375,8 +375,8 @@ html.smil #fancybox-loading div {
 	}
 }
 
-.swiper-wrapper {
-	@media (min-width: @screen-lg-min) {
+.b-filter.swiper-container > .swiper-wrapper {
+	@media (min-width: @screen-xl-min) {
 		display: block;
 		transform: none !important;
 	}
