fixed swiper in portfolio section item menu.

--- a/src/less/common.less
+++ b/src/less/common.less
@@ -375,7 +375,8 @@ html.smil #fancybox-loading div {
 	}
 }
 
-.b-filter.swiper-container > .swiper-wrapper {
+.b-filter.swiper-container > .swiper-wrapper,
+.b-portfolio-tag-outer .swiper-wrapper {
 	@media (min-width: @screen-xl-min) {
 		display: block;
 		transform: none !important;
