added cases. some code & style fixes.

--- a/src/templates/client.jade
+++ b/src/templates/client.jade
@@ -3,6 +3,7 @@ extends ./layouts/layout.jade
 block content
     .b-page
         .container
+            a.b-back-button(href='clients.html') Клиенты
             h1.b-page__title Классика
 
             .b-client
