--- a/src/less/mymixins.less
+++ b/src/less/mymixins.less
@@ -2,118 +2,131 @@
 @import "mixins";
 
 .mylink(@color, @border-color, @hover-color) {
-	display: inline-block;
-	color: @color;
-	border-bottom: 2px solid @border-color;
+    display: inline-block;
+    color: @color;
+    border-bottom: 2px solid @border-color;
 
-	&:hover, &:active, &:focus {
-		text-decoration: none;
-		color: @hover-color;
-		border-bottom-color: @hover-color;
-	}
+    &:hover, &:active, &:focus {
+        text-decoration: none;
+        color: @hover-color;
+        border-bottom-color: @hover-color;
+    }
 }
 
 .mylink-extended(@color: @text-color, @border: 2px solid @link-decoration-color, @hover-color: @link-hover-color) {
-	display: inline-block;
-	color: @color;
-	border-bottom: @border;
+    display: inline-block;
+    color: @color;
+    border-bottom: @border;
 
-	&:hover, &:active, &:focus {
-		text-decoration: none;
-		color: @hover-color;
-		border-bottom-color: @hover-color;
-	}
+    &:hover, &:active, &:focus {
+        text-decoration: none;
+        color: @hover-color;
+        border-bottom-color: @hover-color;
+    }
 }
 
 // Заголовок
 .my-heading-h1() {
-	font-size: 42px;
-	font-weight: bold;
+    font-size: 42px;
+    font-weight: bold;
 
-	@media (min-width: @screen-md-min) {
-		font-size: 64px;
-	}
+    @media (min-width: @screen-md-min) {
+        font-size: 64px;
+    }
 
-	@media (min-width: @screen-xl-min) {
-		font-size: 70px;
-	}
+    @media (min-width: @screen-xl-min) {
+        font-size: 70px;
+    }
 }
 
 // Подзаголовок
 .my-heading-h2() {
-	font-size: 38px;
-	font-weight: bold;
+    font-size: 38px;
+    font-weight: bold;
 
-	@media (min-width: @screen-md-min) {
-		font-size: 58px;
-	}
+    @media (min-width: @screen-md-min) {
+        font-size: 58px;
+    }
 
-	@media (min-width: @screen-xl-min) {
-		font-size: 63px;
-	}
+    @media (min-width: @screen-xl-min) {
+        font-size: 63px;
+    }
 }
 
 // Подзаголовок (уменьшенный)
 .my-heading-h2-small() {
-	font-size: 40px;
-	font-weight: bold;
+    font-size: 40px;
+    font-weight: bold;
 
-	@media (min-width: @screen-md-min) {
-		font-size: 50px;
-	}
+    @media (min-width: @screen-md-min) {
+        font-size: 50px;
+    }
 
-	@media (min-width: @screen-xl-min) {
-		font-size: 60px;
-	}
+    @media (min-width: @screen-xl-min) {
+        font-size: 60px;
+    }
+}
+
+.my-heading-case-title() {
+    font-size: 38px;
+    font-weight: bold;
+
+    @media (min-width: @screen-md-min) {
+        font-size: 46px;
+    }
+
+    @media (min-width: @screen-xl-min) {
+        font-size: 52px;
+    }
 }
 
 // Описание к заголовку
 .my-heading-lead() {
-	font-size: 22px;
-	font-weight: normal;
+    font-size: 22px;
+    font-weight: normal;
 
-	@media (min-width: @screen-md-min) {
-		font-size: 26px;
-	}
+    @media (min-width: @screen-md-min) {
+        font-size: 26px;
+    }
 
-	@media (min-width: @screen-xl-min) {
-		font-size: 28px;
-	}
+    @media (min-width: @screen-xl-min) {
+        font-size: 28px;
+    }
 }
 
 // Описание к подзаголовку
 .my-heading-h3() {
-	font-size: 18px;
-	font-weight: normal;
+    font-size: 18px;
+    font-weight: normal;
 
-	@media (min-width: @screen-md-min) {
-		font-size: 20px;
-	}
+    @media (min-width: @screen-md-min) {
+        font-size: 20px;
+    }
 
-	@media (min-width: @screen-xl-min) {
-		font-size: 22px;
-	}
+    @media (min-width: @screen-xl-min) {
+        font-size: 22px;
+    }
 }
 
 .my-default-link() {
-	color: @block-link-color;
-	border-bottom: 2px solid @block-link-border-color;
+    color: @block-link-color;
+    border-bottom: 2px solid @block-link-border-color;
 
-	&:hover, &:active, &:focus {
-		text-decoration: none;
-		color: @block-link-hover-color;
-		border-bottom-color: @block-link-hover-border-color;
-	}
+    &:hover, &:active, &:focus {
+        text-decoration: none;
+        color: @block-link-hover-color;
+        border-bottom-color: @block-link-hover-border-color;
+    }
 }
 
 .portfolio-width-helper (@i) when (@i < 9) {
 
-	@screen-width: (@i * (204px + 20px));
-	@width: (@i * (204px + 20px) - 20px);
+    @screen-width: (@i * (204px + 20px));
+    @width: (@i * (204px + 20px) - 20px);
 
-	@media (min-width: @screen-width) {
-		width: @width;
-	}
+    @media (min-width: @screen-width) {
+        width: @width;
+    }
 
-	.portfolio-width-helper(@i + 1);
+    .portfolio-width-helper(@i + 1);
 }
