--- a/src/blocks/b-cases/b-cases.less
+++ b/src/blocks/b-cases/b-cases.less
@@ -24,12 +24,11 @@
     @media (min-width: @screen-xl-min) {
         padding: 0 2%;
 
-        margin-left: 0;
-        margin-right: 0;
+        margin-left: auto;
+        margin-right: auto;
+
+        max-width: ~"calc(2400px + 4% + 4%)";
     }
-    //    @media (min-width: 1600px) {
-    //    margin: 0 50px;
-    //}
 }
 
 .b-cases__item {
@@ -49,7 +48,27 @@
 
     @media (min-width: 1700px) {
         width: 33.3%;
-        //width: 28.1%;
+    }
+
+    color: @brand-info;
+    transition: color 0.2s ease;
+
+    &:hover, &:active, &:focus {
+        text-decoration: none;
+        color: #276ff5;
+
+        .b-cases__media:after {
+            opacity: 1;
+        }
+
+        .b-cases__media:before {
+            opacity: 0;
+        }
+
+        .b-cases__image, .b-cases__video {
+            min-width: 105%;
+            min-height: 105%;
+        }
     }
 }
 
@@ -65,13 +84,24 @@
     }
 }
 
+.b-cases__list.b-cases__list_mod_3_2 .b-cases__item {
+    &:last-child, &:nth-last-child(-n+2) {
+        @media (min-width: 1700px) {
+            max-width: ~"calc(1200px + 4%)";
+        }
+    }
+}
+
 .b-cases__cover {
     position: relative;
 
     border-radius: 15px;
     overflow: hidden;
     margin-bottom: 20px;
-    //margin-bottom: 29px;
+
+    @media (min-width: @screen-xl-min) {
+        margin-bottom: 29px;
+    }
 }
 
 .b-cases__media {
@@ -80,8 +110,9 @@
 
     position: relative;
 
-    &:after {
+    &:before, &:after {
         content: '';
+        z-index: 1;
 
         position: absolute;
         top: 0;
@@ -89,9 +120,23 @@
         width: 100%;
         height: 100%;
 
-        background: linear-gradient(to bottom, rgba(22, 31, 103, 0.5) 0%, rgba(22, 31, 103, 0) 100%);
         border-radius: 15px;
         transform: matrix(1, 0, 0, -1, 0, 0);
+
+        transition: opacity 0.2s ease;
+    }
+
+    &:before {
+        z-index: 1;
+
+        background: linear-gradient(to bottom, rgba(22, 31, 103, 0.5) 0%, rgba(22, 31, 103, 0) 100%);
+    }
+
+    &:after {
+        z-index: 2;
+        opacity: 0;
+
+        background: linear-gradient(180deg, #2856F6 0%, rgba(40, 86, 246, 0) 100%);
     }
 }
 
@@ -104,6 +149,7 @@
     left: 50%;
 
     transform: translate(-50%, -50%);
+    transition: all 0.2s ease;
 }
 
 .b-cases__bagde {
@@ -112,11 +158,13 @@
     top: 25px;
     left: 25px;
 
-    padding: 12px 15px;
+    padding: 12px 25px;
 
     background: #FFFFFF;
     box-shadow: 0 10px 25px rgba(22, 31, 103, 0.25);
     border-radius: 10px;
+
+    z-index: 3;
 }
 
 .b-cases__client {
@@ -131,13 +179,15 @@
     left: 25px;
 
     font-weight: bold;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 47px/2;
     /* identical to box height */
 
-    letter-spacing: 0.1em;
+    letter-spacing: 2.5px;
 
     color: #FFFFFF;
+
+    z-index: 3;
 }
 
 .b-cases__tag {
@@ -148,8 +198,6 @@
 .b-cases__title {
     .my-heading-case-title();
     line-height: 104%;
-
-    color: @brand-info;
 
     margin: 0;
 }
