--- a/src/blocks/b-cases/b-cases.less
+++ b/src/blocks/b-cases/b-cases.less
@@ -158,7 +158,7 @@
     top: 25px;
     left: 25px;
 
-    padding: 12px 25px;
+    padding: 6.5px 10px;
 
     background: #FFFFFF;
     box-shadow: 0 10px 25px rgba(22, 31, 103, 0.25);
@@ -168,8 +168,8 @@
 }
 
 .b-cases__client {
-    max-width: 90px;
-    max-height: 24px;
+    max-width: 100px;
+    max-height: 35px;
 }
 
 .b-cases__tags {
@@ -184,6 +184,7 @@
     /* identical to box height */
 
     letter-spacing: 2.5px;
+    text-transform: uppercase;
 
     color: #FFFFFF;
 
