--- a/src/blocks/b-cases/b-cases.less
+++ b/src/blocks/b-cases/b-cases.less
@@ -95,7 +95,6 @@
 .b-cases__cover {
     position: relative;
 
-    border-radius: 15px;
     overflow: hidden;
     margin-bottom: 20px;
 
@@ -105,8 +104,13 @@
 }
 
 .b-cases__media {
-    height: 400px;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio */
+
+    //height: 400px;
     overflow: hidden;
+    border-radius: 15px;
+    -webkit-transform: translateZ(0);
 
     position: relative;
 
@@ -129,7 +133,7 @@
     &:before {
         z-index: 1;
 
-        background: linear-gradient(to bottom, rgba(22, 31, 103, 0.5) 0%, rgba(22, 31, 103, 0) 100%);
+        //background: linear-gradient(to bottom, rgba(22, 31, 103, 0.5) 0%, rgba(22, 31, 103, 0) 100%);
     }
 
     &:after {
