--- a/src/less/bootstrap/variables.less
+++ b/src/less/bootstrap/variables.less
@@ -53,7 +53,8 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-primary:     'IBM Plex Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-primary:     'craftwork_groteskregular', "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-secondary:   'craftwork_groteskheavy', "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
@@ -78,7 +79,7 @@
 @line-height-computed:    floor((@font-size-base * @line-height-base)); // ~20px
 
 //** By default, this inherits from the `<body>`.
-@headings-font-family:    inherit;
+@headings-font-family:    @font-family-secondary;
 @headings-font-weight:    bold;
 @headings-line-height:    1.1;
 @headings-color:          #161f6a; //inherit;
