--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -7,8 +7,8 @@ head
     meta(name="description", content="")
 
     block styles
-        link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700&display=swap&subset=cyrillic')
-        //link(rel='stylesheet', href='assets/fonts/stylesheet.css')
+        //link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700&display=swap&subset=cyrillic')
+        link(rel='stylesheet', href='assets/fonts/stylesheet.css')
         link(rel='stylesheet', href='assets/css/bootstrap.min.css')
         link(rel='stylesheet', href='assets/vendor/slick-carousel/slick/slick.css')
         link(rel='stylesheet', href='assets/vendor/slick-carousel/slick/slick-theme.css')
