--- a/src/less/bootstrap/variables.less
+++ b/src/less/bootstrap/variables.less
@@ -53,8 +53,8 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-primary:     'craftwork_groteskregular', "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-family-secondary:   'craftwork_groteskheavy', "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-primary:     'craftwork_grotesk', "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-secondary:   'craftwork_grotesk', "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
