--- a/src/less/bootstrap/variables.less
+++ b/src/less/bootstrap/variables.less
@@ -80,7 +80,7 @@
 
 //** By default, this inherits from the `<body>`.
 @headings-font-family:    @font-family-secondary;
-@headings-font-weight:    bold;
+@headings-font-weight:    800;
 @headings-line-height:    1.1;
 @headings-color:          #161f6a; //inherit;
 
